--- a/BeauitySaloonWeb/Areas/Manager/Views/ManagerSalons/Details.cshtml
+++ b/BeauitySaloonWeb/Areas/Manager/Views/ManagerSalons/Details.cshtml
@@ -1,49 +1,52 @@
 ﻿@model BeauitySaloonWeb.Models.ViewModel.Salons.SalonWithServicesViewModel
 @{
-    this.ViewData["Title"] = "Salon Manager: " + Model.Name;
+    if (Model.Services != null)
+    {
+        this.ViewData["Title"] = "Salon Manager: " + Model.Name;
+    }
 }
 
-<div class="row row-eq-height">
-    <!-- Info Box -->
-    <div class="col-lg-5 info_box_col">
-        <div class="info_box">
-            <div class="info_image"><img src="@Model.ImageUrl" alt=""></div>
-            <div class="info_content">
-                <div class="info_title">@Model.Name</div>
-                <div class="info_text">Category: <strong>@Model.CategoryName</strong></div>
-                <div class="info_text">City: <strong>@Model.CityName</strong></div>
-                <div class="info_text">Address: <strong>@Model.Address</strong></div>
-                <div class="info_text">
-                    Rating: &nbsp;&nbsp;
-                    <span class="star-rating">
-                        <span class="fa fa-star-o" data-rating="1"></span>
-                        <span class="fa fa-star-o" data-rating="2"></span>
-                        <span class="fa fa-star-o" data-rating="3"></span>
-                        <span class="fa fa-star-o" data-rating="4"></span>
-                        <span class="fa fa-star-o" data-rating="5"></span>
-                        <input type="hidden" name="whatever1" class="rating-value" value="@Model.Rating">
-                    </span>
-                    <span>&nbsp; ( @Model.Rating.ToString("F") / 5.00 ) from @Model.RatersCount votes</span>
+@{
+    if (Model.Services != null)
+    {
+        <div class="row row-eq-height">
+            <!-- Info Box -->
+            <div class="col-lg-5 info_box_col">
+                <div class="info_box">
+                    <div class="info_image"><img src="@Model.ImageUrl" alt=""></div>
+                    <div class="info_content">
+                        <div class="info_title">@Model.Name</div>
+                        <div class="info_text">Category: <strong>@Model.CategoryName</strong></div>
+                        <div class="info_text">City: <strong>@Model.CityName</strong></div>
+                        <div class="info_text">Address: <strong>@Model.Address</strong></div>
+                        <div class="info_text">
+                            Rating: &nbsp;&nbsp;
+                            <span class="star-rating">
+                                <span class="fa fa-star-o" data-rating="1"></span>
+                                <span class="fa fa-star-o" data-rating="2"></span>
+                                <span class="fa fa-star-o" data-rating="3"></span>
+                                <span class="fa fa-star-o" data-rating="4"></span>
+                                <span class="fa fa-star-o" data-rating="5"></span>
+                                <input type="hidden" name="whatever1" class="rating-value" value="@Model.Rating">
+                            </span>
+                            <span>&nbsp; ( @Model.Rating.ToString("F") / 5.00 ) from @Model.RatersCount votes</span>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- Panel -->
-    <div class="col-lg-7">
-        <h1>Services:</h1>
-        <table class="table table-bordered">
-            <thead class="thead-light">
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Available</th>
-                    <th scope="col">Change</th>
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    if (Model.Services != null)
-                    {
-                        foreach (var service in Model.Services)
+            <!-- Panel -->
+            <div class="col-lg-7">
+                <h1>Services:</h1>
+                <table class="table table-bordered">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Available</th>
+                            <th scope="col">Change</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var service in Model.Services)
                         {
                             <tr>
                                 <th scope="row">@service.ServiceName</th>
@@ -58,28 +61,66 @@
                                     }
                                 </td>
                                 <td>
-                                    <form method="post">
+                                    @using (Html.BeginForm("ChangeServiceAvailableStatus", "ManagerSalons", new { salonId = Model.Id, serviceId = service.ServiceId }, FormMethod.Post, new { enctype = "multipart/form-data" }))
+                                    {
                                         <button type="submit" class="btn btn-outline-info btn-sm"
                                                 asp-area="Manager" asp-controller="Salons" asp-action="ChangeServiceAvailableStatus"
                                                 asp-route-salonId="@Model.Id" asp-route-serviceId="@service.ServiceId">
                                             Change
                                         </button>
-                                    </form>
-                                </td>
+                                    }
+                                    </td>
                             </tr>
                         }
-                    }
-                }
-            </tbody>
-        </table>
-    </div>
-</div>
-<hr class="bg-dark mx-4" style="height: 6px;" />
 
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <hr class="bg-dark mx-4" style="height: 6px;" />
+    }
+}
 <div>
-    @*@await Component.InvokeAsync("AllAppointmentsBySalon", Model.Id)*@
+    <div id="_AllAppointmentsBySalon"></div>
 </div>
 
 @section Scripts {
     <script src="~/Content/js/rating-static.js" asp-append-version="true"></script>
+    <script type="text/javascript">
+    $(document).ready(function () {
+        if (@Model.Id != 0) {
+            GetAppointmentDetailsBySalonId(@Model.Id);
+            SalonsSimpleList();
+            }
+        });
+
+        function GetAppointmentDetailsBySalonId(id) {
+            $.ajax({
+                type: "Get",
+                url: "/ManagerSalons/GetAppointmentDetailsBySalonId",
+                data: { Id: id },
+                success: function (res) {
+                    $('#_AllAppointmentsBySalon').empty().html(res);
+                },
+                error: function (res) {
+                    alert(res);
+                }
+            });
+        }
+
+        function SalonsSimpleList() {
+            $.ajax({
+                type: "Get",
+                url: "/ManagerDashboard/SalonsSimpleList",
+                success: function (res) {
+                    $('#_SalonsSimpleList').empty().html(res);
+                },
+                error: function (res) {
+                    alert(res);
+                }
+            });
+        }
+    </script>
 }
+
+
