--- a/BeauitySaloonWeb/Areas/Manager/Views/Shared/_ManagerLayout.cshtml
+++ b/BeauitySaloonWeb/Areas/Manager/Views/Shared/_ManagerLayout.cshtml
@@ -29,7 +29,7 @@
         <div style="padding-top: 90px;">
 
             <div class="text-center">
-                <a style="color: #BA55D3" asp-area="" asp-controller="Home" asp-action="Index"><strong>BACK TO HOME PAGE</strong></a>
+                <a style="color: #BA55D3" href="/Home/Index"><strong>BACK TO HOME PAGE</strong></a>
             </div>
             <hr class="bg-dark mx-4" style="height: 6px;" />
             <div class="d-flex" id="wrapper">
