--- a/BeauitySaloonWeb/Views/Appointments/CancelAppointment.cshtml
+++ b/BeauitySaloonWeb/Views/Appointments/CancelAppointment.cshtml
@@ -1,47 +1,51 @@
-﻿
+﻿@model BeauitySaloonWeb.Models.ViewModel.Appointments.AppointmentViewModel
 @{
-    ViewBag.Title = "CancelAppointment";
+    this.ViewData["Title"] = "Cancel Appointment";
 }
 
-
-<h3><strong>Вы действительно хотите отменить запись?</strong></h3>
-<form class="col-6 mt-5">
-    <div class="form-group row">
-        <label class="col-sm-3 col-form-label">Время и дата</label>
-        <div class="col-sm-7">
-            <div class="form-control">@Model.DateTime</div>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-sm-3 col-form-label">Салон</label>
-        <div class="col-sm-7">
-            <div class="form-control">@Model.SalonName</div>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-sm-3 col-form-label">Адрес</label>
-        <div class="col-sm-7">
-            <div class="form-control">@Model.SalonCityName, @Model.SalonAddress</div>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-sm-3 col-form-label">Услуга</label>
-        <div class="col-sm-7">
-            <div class="form-control">@Model.ServiceName</div>
-        </div>
-    </div>
-</form>
-
-<div class="col-6 mt-5 ml-5">
-    <div class="row ml-5">
-        <form method="post">
-            <button type="submit" class="btn btn-outline-success"
-                    asp-area="" asp-controller="Appointments" asp-action="DeleteAppointment" asp-route-id="@Model.Id">
-                Да, отменить!
-            </button>
+@{
+    if (Model != null)
+    {
+        <h3><strong>Are you sure you want to cancel this appointment?</strong></h3>
+        <form class="col-6 mt-5">
+            <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Date and Time</label>
+                <div class="col-sm-7">
+                    <div class="form-control">@Model.DateTime</div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Salon</label>
+                <div class="col-sm-7">
+                    <div class="form-control">@Model.SalonName</div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Address</label>
+                <div class="col-sm-7">
+                    <div class="form-control">@Model.SalonCityName, @Model.SalonAddress</div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Service</label>
+                <div class="col-sm-7">
+                    <div class="form-control">@Model.ServiceName</div>
+                </div>
+            </div>
         </form>
-        <div class="ml-5">
-            <a class="btn btn-danger" asp-area="" asp-controller="Appointments" asp-action="Index"> Нет! Назад. </a>
+
+        <div class="col-6 mt-5 ml-5">
+            <div class="row ml-5">
+                @using (Html.BeginForm("DeleteAppointment", "Appointments",new {id= Model.Id }, FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                        <button type="submit" class="btn btn-outline-success">
+                            Yes, Cancel it!
+                        </button>
+                }
+                    <div class="ml-5">
+                        <a class="btn btn-danger" href="/Appointments/Index">No! Go Back</a>
+                    </div>
+                </div>
         </div>
-    </div>
-</div>
+    }
+}
