--- a/BeauitySaloonWeb/Views/Appointments/MakeAnAppointment.cshtml
+++ b/BeauitySaloonWeb/Views/Appointments/MakeAnAppointment.cshtml
@@ -1,9 +1,11 @@
-﻿
+﻿@model BeauitySaloonWeb.Models.ViewModel.Appointments.AppointmentInputModel
+
 @{
-    ViewBag.Title = "MakeAnAppointment";
+    this.ViewData["Title"] = "Make An Appointment";
 }
-
-
+@section Styles {
+    <link href="~/Content/css/date-picker.css" rel="stylesheet" asp-append-version="true" />
+}
 
 <div class="container-fluid ">
     <div class="row justify-content-center mx-0">
@@ -12,88 +14,88 @@
                 <form autocomplete="off">
                     <div class="card-header">
                         <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1">
-                            <input type="text" id="dp1" class="datepicker" placeholder="&#xf073; Выберите дату" style="font-family:Arial, FontAwesome" name="date" readonly />
+                            <input type="text" id="dp1" class="datepicker" placeholder="&#xf073; Pick Date" style="font-family:Arial, FontAwesome" name="date" readonly />
                         </div>
                     </div>
                     <div class="card-body p-3 p-sm-5">
                         <div class="row text-center mx-0">
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">09:00</div>
+                                <div class="cell py-1">9:00AM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">09:30</div>
+                                <div class="cell py-1">9:30AM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">10:00</div>
+                                <div class="cell py-1">10:00AM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">10:30</div>
+                                <div class="cell py-1">10:30AM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">11:00</div>
+                                <div class="cell py-1">11:00AM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">11:30</div>
-                            </div>
-                        </div>
-                        <div class="row text-center mx-0">
-                            <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">12:00</div>
-                            </div>
-                            <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">12:30</div>
-                            </div>
-                            <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">13:00</div>
-                            </div>
-                            <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">13:30</div>
-                            </div>
-                            <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">14:00</div>
-                            </div>
-                            <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">14:30</div>
+                                <div class="cell py-1">11:30AM</div>
                             </div>
                         </div>
                         <div class="row text-center mx-0">
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">15:00</div>
+                                <div class="cell py-1">12:00PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">15:30</div>
+                                <div class="cell py-1">12:30PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">16:00</div>
+                                <div class="cell py-1">1:00PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">16:30</div>
+                                <div class="cell py-1">1:30PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">17:00</div>
+                                <div class="cell py-1">2:00PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">17:30</div>
+                                <div class="cell py-1">2:30PM</div>
                             </div>
                         </div>
                         <div class="row text-center mx-0">
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">18:00</div>
+                                <div class="cell py-1">3:00PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">18:30</div>
+                                <div class="cell py-1">3:30PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">19:00</div>
+                                <div class="cell py-1">4:00PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">19:30</div>
+                                <div class="cell py-1">4:30PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">20:00</div>
+                                <div class="cell py-1">5:00PM</div>
                             </div>
                             <div class="col-md-2 col-4 my-1 px-2">
-                                <div class="cell py-1">20:30</div>
+                                <div class="cell py-1">5:30PM</div>
+                            </div>
+                        </div>
+                        <div class="row text-center mx-0">
+                            <div class="col-md-2 col-4 my-1 px-2">
+                                <div class="cell py-1">6:00PM</div>
+                            </div>
+                            <div class="col-md-2 col-4 my-1 px-2">
+                                <div class="cell py-1">6:30PM</div>
+                            </div>
+                            <div class="col-md-2 col-4 my-1 px-2">
+                                <div class="cell py-1">7:00PM</div>
+                            </div>
+                            <div class="col-md-2 col-4 my-1 px-2">
+                                <div class="cell py-1">7:30PM</div>
+                            </div>
+                            <div class="col-md-2 col-4 my-1 px-2">
+                                <div class="cell py-1">8:00PM</div>
+                            </div>
+                            <div class="col-md-2 col-4 my-1 px-2">
+                                <div class="cell py-1">8:30PM</div>
                             </div>
                         </div>
                     </div>
@@ -103,56 +105,75 @@
 
         <div class="col-lg-6">
             <div>
-                @await Component.InvokeAsync("SalonServiceDetails", new { Model.SalonId, Model.ServiceId })
+                <div id="_SalonServiceDetails"></div>
             </div>
-            <form method="post" enctype="multipart/form-data">
-                <input asp-for="@Model.SalonId" value="@Model.SalonId" class="form-control" hidden>
-                <input asp-for="@Model.ServiceId" value="@Model.ServiceId" class="form-control" hidden>
+            @using (Html.BeginForm("MakeAnAppointment", "Appointments", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.HiddenFor(x => x.SalonId)
+                @Html.HiddenFor(x => x.ServiceId)
                 <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Дата</label>
+                    <label class="col-sm-2 col-form-label">Date</label>
                     <div class="col-sm-10">
                         <div id="selectedDate" asp-for="@Model.Date" class="form-control" hidden></div>
-                        <input asp-for="@Model.Date" value="" class="form-control" required readonly />
-                        <span asp-validation-for="Date" class="text-danger"></span>
+                        @Html.TextBoxFor(x => x.Date, new { @class = "form-control", @required = "required", @readonly= "readonly" })
+                        <span>@Html.ValidationMessageFor(s => s.Date, null, new { @class = "text-danger" })</span>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Время</label>
+                    <label class="col-sm-2 col-form-label">Time</label>
                     <div class="col-sm-10">
                         <div id="selectedTime" asp-for="@Model.Time" class="form-control" hidden></div>
-                        <input asp-for="@Model.Time" value="" class="form-control" required readonly />
-                        <span asp-validation-for="Time" class="text-danger"></span>
+                        @Html.TextBoxFor(x => x.Time, new { @class = "form-control", @required = "required", @readonly = "readonly" })
+                        <span>@Html.ValidationMessageFor(s => s.Time, null, new { @class = "text-danger" })</span>
                     </div>
                 </div>
                 <div class="form-group row mt-4">
                     <div class="col-sm-10">
-                        <button type="submit" class="button button-large button_1 elements_button my-2"
-                                asp-area="" asp-controller="Appointments" asp-action="MakeAnAppointment">
-                            Создать запись
+                        <button type="submit" class="button button-large button_1 elements_button my-2">
+                            Make An Appointment
                         </button>
                     </div>
                 </div>
-            </form>
+            }
             <div class="button button-large button_2 elements_button">
-                <a asp-area="" asp-controller="Salons" asp-action="Details" asp-route-id="@Model.SalonId">
-                    <span>Отмена</span><span>Отмена</span>
+                <a href="@Url.Action("Details","Salons",new {id=Model.SalonId})">
+                    <span>Cancel</span><span>Cancel</span>
                 </a>
             </div>
             <div asp-validation-summary="All" data-valmsg-summary="true"></div>
         </div>
-
     </div>
 </div>
 
-<!--
-<div id="selectedDate"></div>
-<div id="selectedTime"></div>
--->
+
 
 @section Scripts {
-    <script src="~/js/bootstrap-datepicker.js" asp-append-version="true"></script>
-    <script src="~/js/date-picker.js" asp-append-version="true"></script>
-    <script type="text/javascript">$.validator.setDefaults({
+    <script src="~/Content/js/bootstrap-datepicker.js" asp-append-version="true"></script>
+    <script src="~/Content/js/date-picker.js" asp-append-version="true"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            debugger
+             if (@Model.SalonId != 0) {
+                 SalonServiceDetails(@Model.SalonId,@Model.ServiceId);
+        }
+    });
+        $.validator.setDefaults({
             ignore: ""
-        })</script>
+        })
+
+        function SalonServiceDetails(SalonId, ServiceId) {
+        $.ajax({
+            type: "Get",
+            url: "/Appointments/GetSalonServiceDetailsForAppointment",
+            data: { SalonId: SalonId, ServiceId: ServiceId },
+            success: function (res) {
+                debugger
+                $('#_SalonServiceDetails').empty().html(res);
+            },
+            error: function (res) {
+                alert(res);
+            }
+        });
+    }
+    </script>
 }
