--- a/BeauitySaloonWeb/Views/Appointments/UnavailableService.cshtml
+++ b/BeauitySaloonWeb/Views/Appointments/UnavailableService.cshtml
@@ -1,15 +1,15 @@
-﻿
-@{
-    ViewBag.Title = "UnavailableService";
+﻿@{
+    this.ViewData["Title"] = "Unavailable Salon/Service";
 }
 
-<h3>Приносим извенения, но данная услуга либо же салон не доступны.</h3>
+<h3>Sorry, no such salon/service available.</h3>
 
 <div class="row">
     <div class="col-lg-4 ml-lg-5">
         <div class="button button-large button_1 elements_button mt-4">
-            <a asp-area="" asp-controller="Salons" asp-action="Index">
-                <span>Попытаться найти в другом месте</span>
+            <a href="/Salons/Index">
+                <span>Find Another</span>
+                <span>Find Another</span>
             </a>
         </div>
     </div>
