--- a/BeauitySaloonWeb/Views/Appointments/MakeAnAppointment.cshtml
+++ b/BeauitySaloonWeb/Views/Appointments/MakeAnAppointment.cshtml
@@ -129,7 +129,7 @@
                 </div>
                 <div class="form-group row mt-4">
                     <div class="col-sm-10">
-                        <button type="submit" class="button button-large button_1 elements_button my-2">
+                        <button type="submit" class="button button-large button_1 elements_button my-2 text-white">
                             Make An Appointment
                         </button>
                     </div>
