--- a/BeauitySaloonWeb/Views/Shared/_LoginPartial.cshtml
+++ b/BeauitySaloonWeb/Views/Shared/_LoginPartial.cshtml
@@ -10,9 +10,14 @@
                 <a href="~/Administration/AdminDashboard/Index" title="Admin">Admin</a>
             </li>
         }
-<li>
-    <a href="/Account/LogOff" class = "btn btn-dark"  title="Logout">Logout</a>
+<li>    
+    @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
+    {
+    @Html.AntiForgeryToken()
+    <button class="btn btn-dark" type="submit"> Logout </button>
+    }
 </li>
+
     }
     else
     {
