--- a/BeauitySaloonWeb/Views/Categories/Index.cshtml
+++ b/BeauitySaloonWeb/Views/Categories/Index.cshtml
@@ -24,13 +24,13 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="about_text_highlight">
-                                        Запишитесь на услугу за 3 шага:
+                                        Book an appointment in 3 easy steps:
                                     </div>
                                     <div class="about_text_2">
                                         <ul>
-                                            <li> Выберите салон.</li>
-                                            <li> Выберите услугу.</li>
-                                            <li> Выберите желаему дату и время.</li>
+                                            <li>1. Find a salon.</li>
+                                            <li>2. Choose a beauty service.</li>
+                                            <li>3. Pick date and time.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -38,9 +38,9 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="button button-large button_1 elements_button mt-4">
-                                        <a asp-area="" asp-controller="Salons" asp-action="Index" asp-route-sortId="@category.Id">
-                                            <span> Найти салон </span>
-                                            <span> Найти салон </span>
+                                        <a href="/Salons/Details/@category.Id" >
+                                            <span>Find Salons</span>
+                                            <span>Find Salons</span>
                                         </a>
                                     </div>
                                 </div>
